manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant-controller
  labels:
    app.kubernetes.io/name: tenant-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tenant-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tenant-controller
    spec:
      containers:
        - name: tenant-controller
          image: docker.io/flanksource/tenant-controller:v1.0.12
          command:
            - /app/tenant-controller
          args:
            - serve
            - -c
            - /app/config.yml
          volumeMounts:
          - name: config-volume
            mountPath: /app/config.yml
            subPath: config.yml
      volumes:
      - name: config-volume
        configMap:
         name: tenant-controller
