manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: tenant-controller
  name: tenant-controller
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: tenant-controller
  sessionAffinity: None
  type: ClusterIP
