manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: ingress-ca
  name: tenant-controller
spec:
  ingressClassName: nginx
  rules:
  - host: tenant-controller.azure.lab.flanksource.com
    http:
      paths:
      - backend:
          service:
            name: tenant-controller
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - tenant-controller.azure.lab.flanksource.com
    secretName: tenant-controller-tls
